# OpenGl

MinimalExample/: CMakeLists.txt
MinimalExample/src/: main.cpp
SimpleWindow/: CMakeLists.txt
SimpleWindow/src/: main.cpp
